--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
   <string name="weather_wind">Wind</string>
   <string name="weather_humidity">Humidity</string>
   <string name="weather_pressure">Pressure</string>
+  <string name="weather_todayTitle">Today</string>
 </resources>
